Moved NMS files to versioned packages